# ubu-core

./: .gitignore  Cargo.toml  UbU.mark2.txt
src/: imapclient.rs  main.rs  pop3client.rs
src/datamodel/: data.rs  database.rs
src/rest/: custom_filters.rs  handlers.rs  mod.rs  routes.rs  schema.rs
webclient/: home.jsp
